--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
     "@divriots/jampack": "^0.20.2",
+    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@types/github-slugger": "^1.3.0",
     "@types/react": "^18.2.22",
